--- a/english_school/index.html
+++ b/english_school/index.html
@@ -72,7 +72,7 @@
                 умений в чтении, письме и счёте на английском языке у Обучение говорению строится
                  на основе сюжетных историй, сценок и песен, делающих процесс обучения английскому 
                 языку живым и интересным. </p>
-                <button>Подробнее</button>
+                <button class="button-more">Подробнее</button>
         </div>
     </div>
     <div class="card">
@@ -85,7 +85,7 @@
                     в изучении английского языка достичь наилучших результатов. Дополнительные 
                     задания onlinec Pupil’sPracticeKit с видеосюжетами и интерактивными заданиями 
                     превратит выполнение домашнего задания в увлекательное занятие.</p>
-                    <button>Подробнее</button>
+                    <button class="button-more">Подробнее</button>
             </div>
         </div>
         <div class="card">
@@ -96,7 +96,7 @@
                     <p>Вдохновляющий курс, ориентированный на мотивацию и развитие  учащихся младшего подросткового возраста. 
                         Курс отражает современные тенденции и требования к обучению практическому владению английским языком в повседневном общении и включает 
                             в себя аутентичные видеоролики BBC и интерактивные задания </p>
-                            <button>Подробнее</button>
+                            <button class="button-more">Подробнее</button>
                 </div>
             </div>
     </div>
@@ -111,8 +111,9 @@
           <p>Многоуровневый курс английского языка, направленный не только на 
               освоение «общего» английского, но и на успешную подготовку учащихся к 
               школьным и университетским экзаменам.</p>
-     <button>Подробнее</button>
-     </div></div>
+     <button class="button-more">Подробнее</button>
+     </div>
+    </div>
          <div class="card card-next">
        <div class="card-header bg-orange">
         <p>Adults (18 +)</p>
@@ -121,7 +122,7 @@
         <p>Это общий курс английского языка для взрослых который сочетает в материалы
              от издательства Cambridge University Press с проверенной оценкой от экспертов
               Cambridge Assessment English. </p>
-        <button>Подробнее</button>
+        <button class="button-more">Подробнее</button>
         </div>
 </section>
 <section class="test bg-orange">
@@ -130,8 +131,8 @@
 <button>Пройти тест</button>
 </section>
 <section class="teachers">
-        <div class="wrapper-content">
-            <h3>Наши преподаватели</h3>
+        <h3>Наши преподаватели</h3>
+        <div class="wrapper-content fwrap">
 <div class="teacher-item">
     <div class="video"><iframe width="378" height="275" src="https://www.youtube.com/embed/y6xNL41CB9o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
     <div class="teacher-name">Имя Фамилия</div>
@@ -169,35 +170,37 @@
     Excepteur sint </p> 
 </div>
 </section>
-<section class="why-we">
+<section class="why-we bg-orange">
     <h2>Почему мы?</h2>
-<div class="why">
+    <div class="wrapper-content fwrap">
+<div class="why teacher-item">
     <img src="img/why1.jpg" width="379" height="249" alt="">
     <p>Наши центры соответствуют требованиям Министрества образования, 
         что подтверждает Лицензия на осуществленипе образовательной деятельности</p>
 </div>
-<div class="why">
+<div class="why teacher-item">
      <img src="img/why2.jpg" width="379" height="249" alt="">
         <p>Квалифицированный академический персонал, в большинстве своем подтверждают уровень 
             владения языком, а так же методиками преподавания на международном уровне!</p>
     </div>
-<div class="why">
+<div class="why teacher-item">
         <img src="img/why3.jpg" width="379" height="249" alt="">
     <p>Наличие сертификата соответствия стандарту ГОСТ РПО 2016:2019 (VCRRAO 2016:2019) 
         подтверждает возможность компании участвовать в тендерах и гос. заказах</p>
 </div>
-<div class="why">
+<div class="why teacher-item">
         <img src="img/why4.jpg" width="379" height="249" alt="">
         <p>Подготовка, а так же сдача международных экзаменов наших студентов в 100% случаях!</p>
     </div>
-<div class="why">
+<div class="why teacher-item">
         <img src="img/why5.jpg" width="379" height="249" alt="">
     <p>Наличие сертификата соответствия стандарту ГОСТ РПО 2016:2019 (VCRRAO 2016:2019) 
         подтверждает возможность компании участвовать в тендерах и гос. заказах</p>
 </div>
-<div class="why">
+<div class="why teacher-item">
         <img src="img/why6.jpg" width="379" height="249" alt="">
         <p>Практика подготовки к общероссийским экзаменам ОГЭ и ЕГЭ на высокий балл!</p>
+    </div>
     </div>
 </section>
 </body>
