--- a/english_school/index.html
+++ b/english_school/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <link href="fonts/adineuePROKZ-Black.ttf" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <title>Level Eleven</title>
 </head>
 <header>
@@ -127,7 +127,7 @@
 </section>
 <section class="test bg-orange">
 <h3>Не знаешь уровень своего английского?</h3>
-<p>Пройди тест из 11 вопросов</p>
+<p>Пройди тест из 11 вопросов!</p>
 <button>Пройти тест</button>
 </section>
 <section class="teachers">
@@ -136,32 +136,32 @@
 <div class="teacher-item">
     <div class="video"><iframe width="378" height="275" src="https://www.youtube.com/embed/y6xNL41CB9o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
     <div class="teacher-name">Имя Фамилия</div>
-    <button>Подробнее</button>
+    <button class="button-more">Подробнее</button>
 </div>
 <div class="teacher-item">
         <div class="video"><iframe width="378" height="275" src="https://www.youtube.com/embed/y6xNL41CB9o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
         <div class="teacher-name">Имя Фамилия</div>
-        <button>Подробнее</button>
+        <button class="button-more">Подробнее</button>
     </div>
     <div class="teacher-item">
     <div class="video"><iframe width="378" height="275" src="https://www.youtube.com/embed/y6xNL41CB9o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
     <div class="teacher-name">Имя Фамилия</div>
-    <button>Подробнее</button>
+    <button class="button-more">Подробнее</button>
 </div>
 <div class="teacher-item">
         <div class="video"><iframe width="378" height="275" src="https://www.youtube.com/embed/y6xNL41CB9o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
         <div class="teacher-name">Имя Фамилия</div>
-        <button>Подробнее</button>
+        <button class="button-more">Подробнее</button>
     </div>
 <div class="teacher-item">
     <div class="video"><iframe width="378" height="275" src="https://www.youtube.com/embed/y6xNL41CB9o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
     <div class="teacher-name">Имя Фамилия</div>
-    <button>Подробнее</button>
+    <button class="button-more">Подробнее</button>
 </div>
 <div class="teacher-item">
         <div class="video"><iframe width="378" height="275" src="https://www.youtube.com/embed/y6xNL41CB9o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
         <div class="teacher-name">Имя Фамилия</div>
-        <button>Подробнее</button>
+        <button class="button-more">Подробнее</button>
     </div>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
     incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
