--- a/english_school/index.html
+++ b/english_school/index.html
@@ -9,7 +9,7 @@
     <title>Level Eleven</title>
 </head>
 <header>
-<div class="logo"><img src="/img/logo.png" width="280" height="85" alt=""></div>
+<div class="logo"><img src="img/logo.png" width="280" height="85" alt=""></div>
 <div class="contacts">
 <span>+7 (383) 000 00 00</span>
 <div class="socials">
