--- a/english_school/index.html
+++ b/english_school/index.html
@@ -132,7 +132,7 @@
 </section>
 <section class="teachers">
         <h3>Наши преподаватели</h3>
-        <div class="wrapper-content fwrap">
+        <div class="wrapper-content jc-flex fwrap">
 <div class="teacher-item">
     <div class="video"><iframe width="378" height="275" src="https://www.youtube.com/embed/y6xNL41CB9o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
     <div class="teacher-name">Имя Фамилия</div>
@@ -172,7 +172,7 @@
 </section>
 <section class="why-we bg-orange">
     <h2>Почему мы?</h2>
-    <div class="wrapper-content fwrap">
+    <div class="wrapper-content jc-flex fwrap">
 <div class="why teacher-item">
     <img src="img/why1.jpg" width="379" height="249" alt="">
     <p>Наши центры соответствуют требованиям Министрества образования, 
