--- a/english_school/index.html
+++ b/english_school/index.html
@@ -23,7 +23,7 @@
     <img src="img/vk.png" alt="">
 </div>
 </div>
-<div class="adress">Адреса
+<div class="adress"><span>Адреса</span>
     <img src="img/address.png" width="43" height="43" alt="">
 </div>
 </header>
@@ -105,7 +105,7 @@
         <div class="wrapper-content jc-flex">
         <div class="card card-next">
         <div class="card-header bg-orange">
-         <p>Teens(13-17 лет)</p>
+         <p>Teens (13-17 лет)</p>
         </div>
         <div class="card-main">
           <p>Многоуровневый курс английского языка, направленный не только на 
@@ -171,7 +171,7 @@
 </div>
 </section>
 <section class="why-we bg-orange">
-    <h2>Почему мы?</h2>
+    <h3>Почему мы?</h3>
     <div class="wrapper-content jc-flex fwrap">
 <div class="why teacher-item">
     <img src="img/why1.jpg" width="379" height="249" alt="">
@@ -203,8 +203,40 @@
     </div>
     </div>
 </section>
+<section class="process">
+    <h3>Этапы процесса обучения</h3>
+</section>
+<section class="make-choise">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+</section>
+<section class="advantages">
+<h3>Наши преимущества</h3>
+</section>
+<section class="otziv">
+    <h3>Отзывы</h3>
+</section>
+<section class="form">
+    <h3>Пройдите бесплатный пробный урок</h3>
+    <input type="text">
+    <input type="number">
+    <input type="select">
+    <button type="submit">Запсаться</button>
+</section>
 </body>
 <footer>
-
+<div class="map"><iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Aaa8a65f14c3b2976f056cc3f2b9f8bc56d5deba6482c83cc0d99b5f7259b8e24&amp;source=constructor" width="100%" height="625" frameborder="0"></iframe></div>
+<div class="contacts-footer bg-orange">
+    <div class="logo-footer"><img src="img/logo-footer.png" width="375px" height="111" alt=""></div>
+    <div class="contact-footer">
+        <h4>Контакты</h4>
+        <p>г. Новосибирск, ул.Фрунзе, 71/1 <br>
+            +7 (345) 000 00 00 <br>
+            leveleleven@gmail.com
+            </p>
+    </div>
+</div>
 </footer>
 </html>
