--- a/english_school/index.html
+++ b/english_school/index.html
@@ -13,14 +13,14 @@
 <div class="contacts">
 <span>+7 (383) 000 00 00</span>
 <div class="socials">
-    <img src="img/fb.png" alt="">
-    <img src="img/g+.png" alt="">
-    <img src="img/inst.png" alt="">
-    <img src="img/tw.png" alt="">
-    <img src="img/vk.png" alt="">
-    <img src="img/vk.png" alt="">
-    <img src="img/vk.png" alt="">
-    <img src="img/vk.png" alt="">
+    <a href="#"><img src="img/fb.png" alt=""></a>
+    <a href="#"><img src="img/g+.png" alt=""></a>
+    <a href="#"><img src="img/inst.png" alt=""></a>
+    <a href="#"><img src="img/tw.png" alt=""></a>
+    <a href="#"><img src="img/vk.png" alt=""></a>
+    <a href="#"><img src="img/vk.png" alt=""></a>
+    <a href="#"><img src="img/vk.png" alt=""></a>
+    <a href="#"><img src="img/vk.png" alt=""></a>
 </div>
 </div>
 <div class="adress"><span>Адреса</span>
@@ -28,7 +28,7 @@
 </div>
 </header>
 <nav class="bg-orange__grad">
-<div class="wrapper-content ">
+<div class="wrapper-content">
     <ul class="main-navigation">
         <li class="nav-item bg-orange"><a href="">Курсы</a></li>
         <li class="nav-item bg-orange"><a href="">Преподаватели</a></li>
@@ -50,7 +50,7 @@
     </section>
     <section class="timer">
             <p>До конца акции</p>
-<h3>35% скидка <span>на обучение</span></h3>
+<h4>35% скидка <span>на обучение</span></h4>
 <div>14</div>
 <span>Дни</span>
 <div>45</div>
@@ -63,16 +63,16 @@
 </section>
 <section class="levels">
     <div class="wrapper-content jc-flex">
-    <div class="card">
+    <div class="card bg-girafe1">
         <div class="card-header bg-orange">
 <p>Pre -schoolers <br>(3-6 лет)</p>
         </div>
         <div class="card-main">
-            <p>Увлекательный  учебный курс для дошкольников разработан с акцентом на формировании 
+            <p class="text">Увлекательный  учебный курс для дошкольников разработан с акцентом на формировании 
                 умений в чтении, письме и счёте на английском языке у Обучение говорению строится
-                 на основе сюжетных историй, сценок и песен, делающих процесс обучения английскому 
-                языку живым и интересным. </p>
-                <button class="button-more">Подробнее</button>
+                 на основе сюжетных историй,<br> сценок и песен,<br> делающих процесс <br> обучения английскому <br>
+                языку живым <br>и интересным. </p>
+                <button class="button-more button-level">Подробнее</button>
         </div>
     </div>
     <div class="card">
@@ -80,23 +80,23 @@
                 <p>Primary <br> (7-9 лет )</p>
             </div>
             <div class="card-main">
-                <p>Уникальное сочетание лучших традиций академического подхода к обучению 
+                <p class="text">Уникальное сочетание лучших традиций академического подхода к обучению 
                     и современных коммуникативных технологий позволит с самых первых шагов 
                     в изучении английского языка достичь наилучших результатов. Дополнительные 
                     задания onlinec Pupil’sPracticeKit с видеосюжетами и интерактивными заданиями 
                     превратит выполнение домашнего задания в увлекательное занятие.</p>
-                    <button class="button-more">Подробнее</button>
+                    <button class="button-more button-level">Подробнее</button>
             </div>
         </div>
-        <div class="card">
+        <div class="card bg-girafe2">
                 <div class="card-header bg-orange">
                     <p>Secondary <br>(10-12 лет)</p>
                 </div>
                 <div class="card-main">
-                    <p>Вдохновляющий курс, ориентированный на мотивацию и развитие  учащихся младшего подросткового возраста. 
-                        Курс отражает современные тенденции и требования к обучению практическому владению английским языком в повседневном общении и включает 
-                            в себя аутентичные видеоролики BBC и интерактивные задания </p>
-                            <button class="button-more">Подробнее</button>
+                    <p class="text">Вдохновляющий курс, ориентированный на мотивацию и развитие  учащихся младшего подросткового возраста. 
+                        Курс отражает современные тенденции и требования к обучению практическому<br> владению английским <br>языком в повседневном <br>общении и включает<br> 
+                            в себя аутентичные видеоролики<br> BBC и<br> интерактивные <br>задания </p>
+                            <button class="button-more button-level">Подробнее</button>
                 </div>
             </div>
     </div>
@@ -108,10 +108,10 @@
          <p>Teens (13-17 лет)</p>
         </div>
         <div class="card-main">
-          <p>Многоуровневый курс английского языка, направленный не только на 
+          <p class="text">Многоуровневый курс английского языка, направленный не только на 
               освоение «общего» английского, но и на успешную подготовку учащихся к 
               школьным и университетским экзаменам.</p>
-     <button class="button-more">Подробнее</button>
+     <button class="button-more button-level2">Подробнее</button>
      </div>
     </div>
          <div class="card card-next">
@@ -119,14 +119,14 @@
         <p>Adults (18 +)</p>
          </div>
         <div class="card-main">
-        <p>Это общий курс английского языка для взрослых который сочетает в материалы
+        <p class="text">Это общий курс английского языка для взрослых который сочетает в материалы
              от издательства Cambridge University Press с проверенной оценкой от экспертов
               Cambridge Assessment English. </p>
-        <button class="button-more">Подробнее</button>
+        <button class="button-more button-level2">Подробнее</button>
         </div>
 </section>
 <section class="test bg-orange">
-<h3>Не знаешь уровень своего английского?</h3>
+<h4>Не знаешь уровень своего английского?</h4>
 <p>Пройди тест из 11 вопросов!</p>
 <button>Пройти тест</button>
 </section>
@@ -171,35 +171,35 @@
 </div>
 </section>
 <section class="why-we bg-orange">
-    <h3>Почему мы?</h3>
+    <h3>Почему мы</h3>
     <div class="wrapper-content jc-flex fwrap">
 <div class="why teacher-item">
     <img src="img/why1.jpg" width="379" height="249" alt="">
-    <p>Наши центры соответствуют требованиям Министрества образования, 
+    <p class="text">Наши центры соответствуют требованиям Министрества образования, 
         что подтверждает Лицензия на осуществленипе образовательной деятельности</p>
 </div>
 <div class="why teacher-item">
      <img src="img/why2.jpg" width="379" height="249" alt="">
-        <p>Квалифицированный академический персонал, в большинстве своем подтверждают уровень 
+        <p class="text">Квалифицированный академический персонал, в большинстве своем подтверждают уровень 
             владения языком, а так же методиками преподавания на международном уровне!</p>
     </div>
 <div class="why teacher-item">
         <img src="img/why3.jpg" width="379" height="249" alt="">
-    <p>Наличие сертификата соответствия стандарту ГОСТ РПО 2016:2019 (VCRRAO 2016:2019) 
+    <p class="text">Наличие сертификата соответствия стандарту ГОСТ РПО 2016:2019 (VCRRAO 2016:2019) 
         подтверждает возможность компании участвовать в тендерах и гос. заказах</p>
 </div>
 <div class="why teacher-item">
         <img src="img/why4.jpg" width="379" height="249" alt="">
-        <p>Подготовка, а так же сдача международных экзаменов наших студентов в 100% случаях!</p>
+        <p class="text">Подготовка, а так же сдача международных экзаменов наших студентов в 100% случаях!</p>
     </div>
 <div class="why teacher-item">
         <img src="img/why5.jpg" width="379" height="249" alt="">
-    <p>Наличие сертификата соответствия стандарту ГОСТ РПО 2016:2019 (VCRRAO 2016:2019) 
+    <p class="text">Наличие сертификата соответствия стандарту ГОСТ РПО 2016:2019 (VCRRAO 2016:2019) 
         подтверждает возможность компании участвовать в тендерах и гос. заказах</p>
 </div>
 <div class="why teacher-item">
         <img src="img/why6.jpg" width="379" height="249" alt="">
-        <p>Практика подготовки к общероссийским экзаменам ОГЭ и ЕГЭ на высокий балл!</p>
+        <p class="text">Практика подготовки к общероссийским экзаменам ОГЭ и ЕГЭ на высокий балл!</p>
     </div>
     </div>
 </section>
@@ -212,8 +212,15 @@
     <div></div>
     <div></div>
 </section>
-<section class="advantages">
+<section class="advantages bg-orange">
 <h3>Наши преимущества</h3>
+<div class="wrapper-content jc-flex">
+<div class="advantages-item"><img src="img/420216.png" height="115" alt=""><span>Обучение с любого уровня</span></div>
+<div class="advantages-item"><img src="img/appointment.png" alt=""><span>Уроки по будням и выходным</span></div>
+<div class="advantages-item"><img src="img/cap.png" alt=""><span>Удобное расположение</span></div>
+<div class="advantages-item"><img src="img/819865.png" alt=""><span>Повышение успеваемости</span></div>
+<div class="advantages-item"><img src="img/speech-bubble.png" alt=""><span>Разговорная практика с первого занятия</span></div>
+</div>
 </section>
 <section class="otziv">
     <h3>Отзывы</h3>
