--- a/english_school/index.html
+++ b/english_school/index.html
@@ -222,15 +222,33 @@
 <div class="advantages-item"><img src="img/speech-bubble.png" alt=""><span>Разговорная практика с первого занятия</span></div>
 </div>
 </section>
-<section class="otziv">
+<section class="feedback">
     <h3>Отзывы</h3>
+    <div class="wrapper-content">
+        <div class="feedback-item">
+            <img src="img/why1.jpg" width="162" height="162" alt="">
+            <div>
+            <h4 class="feedback-name">Имя<br>Фамилия</h4>
+            <p class="text-feedback">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                  exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+                   dolor in reprehenderit in voluptate velit esse </p>
+            </div>
+        </div>
+    </div>
 </section>
-<section class="form">
-    <h3>Пройдите бесплатный пробный урок</h3>
-    <input type="text">
+<section class="form wrapper-content">
+    <h4>Пройдите бесплатный пробный урок</h4>
+    <div>
+    <input class="name-input" type="text" placeholder="Ваше Имя">
     <input type="number">
-    <input type="select">
+      <select class="" "name="select"> 
+        <option value="value1">Адрес школы</option> 
+        <option selected value="value2">Никитина</option>
+        <option value="value3">Красный проспект</option>
+      </select>
     <button type="submit">Запсаться</button>
+    </div>  
 </section>
 </body>
 <footer>
@@ -247,3 +265,4 @@
 </div>
 </footer>
 </html>
+
