--- a/english_school/index.html
+++ b/english_school/index.html
@@ -49,16 +49,18 @@
         <button class="main-button">Узнать больше</button>
     </section>
     <section class="timer">
-            <p>До конца акции</p>
-<h4>35% скидка <span>на обучение</span></h4>
-<div>14</div>
+            <div class="wrapper-content">
+<h4>35% скидка <br><span>на обучение</span></h4>
+<h5>До конца акции</h5>
+<div class="time bg-orange">14</div>
 <span>Дни</span>
-<div>45</div>
+<div class="time bg-orange">45</div>
 <span>Часы</span>
-<div>04</div>
+<div class="time bg-orange">04</div>
 <span>Минуты</span>
-<div>56</div>
+<div class="time bg-orange">56</div>
 <span>Секунды</span>
+</div>
 <button>Хочу узнать свой уровень</button>
 </section>
 <section class="levels">
@@ -103,7 +105,7 @@
 </section>
 <section class="levels-2">
         <div class="wrapper-content jc-flex">
-        <div class="card card-next">
+        <div class="card-next card">
         <div class="card-header bg-orange">
          <p>Teens (13-17 лет)</p>
         </div>
@@ -207,10 +209,13 @@
     <h3>Этапы процесса обучения</h3>
 </section>
 <section class="make-choise">
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+    <h3>Сделай свой выбор</h3>
+    <div class="wrapper-content jc-flex">
+    <div class="choise-item"><img src="img/kurs1.png" alt=""></div>
+    <div class="choise-item"><img src="img/kurs2.png" alt=""></div>
+    <div class="choise-item"><img src="img/kurs3.png" alt=""></div>
+    <div class="choise-item"><img src="img/kurs4.png" alt=""></div>
+    </div>
 </section>
 <section class="advantages bg-orange">
 <h3>Наши преимущества</h3>
