--- a/english_school/index.html
+++ b/english_school/index.html
@@ -34,16 +34,16 @@
 <nav class="bg-orange__grad">
 
     <ul class="main-navigation">
-        <li class="nav-item bg-orange"><a href="">Курсы</a></li>
-        <li class="nav-item bg-orange"><a href="">Преподаватели</a></li>
-        <li class="nav-item bg-orange"><a href="">Почему мы</a></li>
-        <li class="nav-item bg-orange"><a href="">Этапы обучения</a></li>
-        <li class="nav-item bg-orange"><a href="">Услуги</a></li>
-        <li class="nav-item bg-orange"><a href="">Преимущества</a></li>
-        <li class="nav-item bg-orange"><a href="">Контакты</a></li>
-        <li class="nav-item bg-white"><a href="">Отзывы</a></li>
-        <li class="nav-item bg-white"><a href="">Тест</a></li>
-        <li class="nav-item bg-white"><a href="">Акции</a></li>
+        <li class="nav-item bg-orange"><a href="#course">Курсы</a></li>
+        <li class="nav-item bg-orange"><a href="#prepods">Преподаватели</a></li>
+        <li class="nav-item bg-orange"><a href="#whywe">Почему мы</a></li>
+        <li class="nav-item bg-orange"><a href="#etaps">Этапы обучения</a></li>
+        <li class="nav-item bg-orange"><a href="#uslugi">Услуги</a></li>
+        <li class="nav-item bg-orange"><a href="#preim">Преимущества</a></li>
+        <li class="nav-item bg-orange"><a href="#contacts">Контакты</a></li>
+        <li class="nav-item bg-white"><a href="#otziv">Отзывы</a></li>
+        <li class="nav-item bg-white"><a href="#test">Тест</a></li>
+        <li class="nav-item bg-white"><a href="#actions">Акции</a></li>
     </ul> 
 </div> 
 </nav>
@@ -52,7 +52,7 @@
         <h1>Your <span>new</span> level</h1>
         <button class="main-button">Узнать больше</button>
     </section>
-    <section class="timer">
+    <section class="timer"><a id="actions"></a>
             <div class="wrapper-content">
 <h4>35% скидка <br><span>на обучение</span></h4>
 <h5>До конца акции</h5>
@@ -67,7 +67,7 @@
 </div>
 <button>Хочу узнать свой уровень</button>
 </section>
-<section class="levels">
+<section class="levels"><a id="uslugi"></a>
     <div class="wrapper-content jc-flex">
     <div class="card bg-girafe1">
         <div class="card-header bg-orange">
@@ -136,7 +136,7 @@
 <p>Пройди тест из 11 вопросов!</p>
 <button>Пройти тест</button>
 </section>
-<section class="teachers">
+<section class="teachers"><a id="prepods"></a>
         <h3>Наши преподаватели</h3>
         <div class="wrapper-content jc-flex fwrap">
 <div class="teacher-item">
@@ -176,7 +176,7 @@
     Excepteur sint </p> 
 </div>
 </section>
-<section class="why-we bg-orange">
+<section class="why-we bg-orange"><a id="whywe"></a>
     <h3>Почему мы</h3>
     <div class="wrapper-content jc-flex fwrap">
 <div class="why teacher-item">
@@ -209,7 +209,7 @@
     </div>
     </div>
 </section>
-<section class="process">
+<section class="process"><a id="etaps"></a>
     <h3>Этапы процесса обучения</h3>
     <div class="wrapper-content jc-flex fwrap">
     <div class="process-item">
@@ -379,18 +379,20 @@ viewBox="0 0 8500 8500"
 </div>
 </div>
 </section>
-<section class="make-choise">
+<section class="make-choise"><a id="course"></a>
     <h3>Сделай свой выбор</h3>
-    <div class="wrapper-content jc-flex">
+    <div class="next-slide"></div>
+    <div class="prev-slide"></div>
+        <div class="wrapper-content jc-flex">
         <div class="owl-carousel">
-    <div class="choise-item"><img src="img/kurs1.png" alt=""><span>Английский для начинающих</span><button>Подробнее</button></div>
-    <div class="choise-item"><img src="img/kurs2.png" alt=""><span>Английский для путешествий</span><button>Подробнее</button></div>
-    <div class="choise-item"><img src="img/kurs3.png" alt=""><span>Бизнес английский</span><button>Подробнее</button></div>
-    <div class="choise-item"><img src="img/kurs4.png" alt=""><span>Разговорный английский</span><button>Подробнее</button></div>
+    <div class="choise-item"><img src="img/kurs1.png" alt=""><span>Английский для начинающих</span><button class="choise-button">Подробнее</button></div>
+    <div class="choise-item"><img src="img/kurs2.png" alt=""><span>Английский для путешествий</span><button class="choise-button">Подробнее</button></div>
+    <div class="choise-item"><img src="img/kurs3.png" alt=""><span>Бизнес английский</span><button class="choise-button">Подробнее</button></div>
+    <div class="choise-item"><img src="img/kurs4.png" alt=""><span>Разговорный английский</span><button class="choise-button">Подробнее</button></div>
     </div>
 </div>
 </section>
-<section class="advantages bg-orange">
+<section class="advantages bg-orange"><a id="preim"></a>
 <h3>Наши преимущества</h3>
 <div class="wrapper-content jc-flex">
 <div class="advantages-item"><img src="img/420216.png" height="115" alt=""><span>Обучение с любого уровня</span></div>
@@ -400,7 +402,7 @@ viewBox="0 0 8500 8500"
 <div class="advantages-item"><img src="img/speech-bubble.png" alt=""><span>Разговорная практика с первого занятия</span></div>
 </div>
 </section>
-<section class="feedback">
+<section class="feedback"><a id="otziv"></a>
     <h3>Отзывы</h3>
     <div class="wrapper-content">
         <div class="owl-carousel">
@@ -432,7 +434,7 @@ viewBox="0 0 8500 8500"
     </div>  
 </section>
 </body>
-<footer>
+<footer><a id="contacts"></a>
 <div class="map"><iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Aaa8a65f14c3b2976f056cc3f2b9f8bc56d5deba6482c83cc0d99b5f7259b8e24&amp;source=constructor" width="100%" height="625" frameborder="0"></iframe></div>
 <div class="contacts-footer bg-orange">
     <div class="logo-footer"><img src="img/logo-footer.png" width="375px" height="111" alt=""></div>
@@ -449,23 +451,5 @@ viewBox="0 0 8500 8500"
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 <script src="dist/owl.carousel.min.js"></script>
+<script src="script.js"></script>
 
-<script>
-$('.owl-carousel').owlCarousel({
-    loop:true,
-    margin:10,
-    items:2,
-    nav:true,
-    responsive:{
-        0:{
-            items:1
-        },
-        600:{
-            items:3
-        },
-        1000:{
-            items:4
-        }
-    }
-})
-</script>
