--- a/english_school/index.html
+++ b/english_school/index.html
@@ -404,9 +404,9 @@ viewBox="0 0 8500 8500"
 </section>
 <section class="feedback"><a id="otziv"></a>
     <h3>Отзывы</h3>
-    <div class="wrapper-content">
-        <div class="owl-carousel">
-        <div class="feedback-item">
+    <div class="wrapper-content">    
+        <div class="owl-carousel">            
+    <div class="feedback-item">
             <img src="img/why1.jpg" width="162" height="162" alt="">
             <div>
             <h4 class="feedback-name">Имя<br>Фамилия</h4>
@@ -416,17 +416,16 @@ viewBox="0 0 8500 8500"
                    dolor in reprehenderit in voluptate velit esse </p>
             </div>
     </div>
-   
 </div>
 </div>
 </section>
 <section class="form wrapper-content">
-    <h4>Пройдите бесплатный пробный урок</h4>
+    <h4>Пройдите<br>бесплатный<br> пробный<br>урок</h4>
     <div>
     <input class="name-input" type="text" placeholder="Ваше Имя">
     <input type="number">
-      <select class="" "name="select"> 
-        <option value="value1">Адрес школы</option> 
+      <select class="" name="select"> 
+        <option value="" disabled selected style='display:none;'>выберите из списка</option>
         <option selected value="value2">Никитина</option>
         <option value="value3">Красный проспект</option>
       </select>
