--- a/english_school/index.html
+++ b/english_school/index.html
@@ -14,7 +14,7 @@
 <header>
 <div class="logo"><img src="img/logo.png" width="280" height="85" alt=""></div>
 <div class="contacts">
-<span>+7 (383) 000 00 00</span>
+    <a href="tel:+1234567890"><span>+7 (383) 000 00 00</span></ a>
 <div class="socials">
     <a href="#"><img src="img/vk1.png" alt=""></a>
     <a href="#"><img src="img/vk.png" alt=""></a>
