--- a/english_school/index.html
+++ b/english_school/index.html
@@ -30,19 +30,21 @@
     <img src="img/address.png" width="43" height="43" alt="">
 </div>
 </header>
-<nav class="bg-orange__grad">
+<nav class="bg-orange">
 
     <ul class="main-navigation">
-        <li class="nav-item bg-orange"><a href="#course">Курсы</a></li>
+        <li class="nav-item bg-orange first-item"><a href="#course">Курсы</a></li>
         <li class="nav-item bg-orange"><a href="#prepods">Преподаватели</a></li>
         <li class="nav-item bg-orange"><a href="#whywe">Почему мы</a></li>
         <li class="nav-item bg-orange"><a href="#etaps">Этапы обучения</a></li>
         <li class="nav-item bg-orange"><a href="#uslugi">Услуги</a></li>
         <li class="nav-item bg-orange"><a href="#preim">Преимущества</a></li>
         <li class="nav-item bg-orange"><a href="#contacts">Контакты</a></li>
+        <div class="last-item">
         <li class="nav-item bg-white"><a href="#otziv">Отзывы</a></li>
         <li class="nav-item bg-white"><a href="#test">Тест</a></li>
         <li class="nav-item bg-white"><a href="#actions">Акции</a></li>
+        </div>
     </ul> 
 </div> 
 </nav>
