--- a/english_school/index.html
+++ b/english_school/index.html
@@ -14,7 +14,7 @@
 <header>
 <div class="logo"><img src="img/logo.png" width="280" height="85" alt=""></div>
 <div class="contacts">
-    <a href="tel:+1234567890"><span>+7 (383) 000 00 00</span></ a>
+    <a href="tel:+1234567890"><span>+7 (383) 000 00 00</span></a>
 <div class="socials">
     <a href="#"><img src="img/vk1.png" alt=""></a>
     <a href="#"><img src="img/vk.png" alt=""></a>
@@ -68,7 +68,7 @@
 <div><div class="time bg-orange seconds"><span>56</span></div><p class="under-time">Секунды</p></div>
 </div>
 </div>
-<button class="button-timer">Хочу узнать свой уровень</button>
+<div class="center-button"><button class="button-timer">Хочу узнать свой уровень</button></div>
 </section>
 <section class="levels"><a id="uslugi"></a>
     <div class="wrapper-content jc-flex">
