--- a/english_school/index.html
+++ b/english_school/index.html
@@ -429,6 +429,8 @@ viewBox="0 0 8500 8500"
     </div>
 </div>
 </div>
+<div class="next-slide"></div>
+    <div class="prev-slide"></div>
 </section>
 <section class="form wrapper-content">
     <h4>Пройдите<br>бесплатный<br> пробный<br>урок</h4>
@@ -458,7 +460,8 @@ viewBox="0 0 8500 8500"
 </div>
 </footer>
 <div class="overlay_popup"></div>
-<div class="popup-adress">
+<div class="center-button">
+    <div class="popup-adress">
     <div class="popup-header bg-orange">
     <h4>Адреса</h4>
     <img class="img-close" src="img/close.png" width="19" height="19" alt="">
@@ -476,6 +479,7 @@ viewBox="0 0 8500 8500"
             ул. Станиславского, 6   Ленинский район
             +7 (383) 235–94–45</p>
     </div>
+</div>
 </html>
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
