--- a/english_school/index.html
+++ b/english_school/index.html
@@ -429,8 +429,8 @@ viewBox="0 0 8500 8500"
     </div>
 </div>
 </div>
-<div class="next-slide"></div>
-    <div class="prev-slide"></div>
+<div class="next-slide1"><img src="img/right-arrow (1).png" alt=""></div>
+    <div class="prev-slide1"><img src="img/right-arrow (1).png" alt=""></div>
 </section>
 <section class="form wrapper-content">
     <h4>Пройдите<br>бесплатный<br> пробный<br>урок</h4>
