--- a/english_school/index.html
+++ b/english_school/index.html
@@ -461,25 +461,56 @@ viewBox="0 0 8500 8500"
 </footer>
 <div class="overlay_popup"></div>
 <div class="center-button">
-    <div class="popup-adress">
+    <div class="popup popup-adress">
     <div class="popup-header bg-orange">
     <h4>Адреса</h4>
-    <img class="img-close" src="img/close.png" width="19" height="19" alt="">
+    <button><img class="img-close" src="img/close.png" width="19" height="19" alt=""></button>
     </div>
-    <p>г. Новосибирск, 
-            ул. Фрунзе, 71/1, Дзержинский район
-            +7 (383) 235–94–45</p>
-    <p>г. Новосибирск, 
-            ул. Дуси Ковальчук, 250,  Заельцовский район
-            +7 (383) 235–94–45</p>
-    <p>г. Новосибирск, 
-            ул. Мясниковой, 22,  Калининский район
-            +7 (383) 235–94–45</p>
-    <p>г. Новосибирск, 
-            ул. Станиславского, 6   Ленинский район
-            +7 (383) 235–94–45</p>
+    <div class="info"> 
+    <div>г. Новосибирск, 
+            <br><b> ул. Фрунзе, 71/1, Дзержинский район</b>
+            <br>+7 (383) 235–94–45</div>
+    <div>г. Новосибирск, 
+            <br><b>ул. Дуси Ковальчук, 250,  Заельцовский район</b>
+            <br>+7 (383) 235–94–45</div>
+    <div>г. Новосибирск, 
+            <br><b>ул. Мясниковой, 22,  Калининский район</b>
+            <br>+7 (383) 235–94–45</div>
+    <div>г. Новосибирск, 
+            <br><b>ул. Станиславского, 6   Ленинский район</b>
+            <br>+7 (383) 235–94–45</div>
     </div>
 </div>
+</div>
+<div class="center-button">
+        <div class="popup popup-info">
+        <div class="popup-header bg-orange">
+        <h4>Узнать больше</h4>
+        <button><img class="img-close" src="img/close.png" width="19" height="19" alt=""></button>
+        </div>
+        <div class="info"> 
+                <input class="name-input" type="text" placeholder="Ваше Имя">
+                <input id="phone"placeholder="+7 (___) ___-____">
+                <button class="popup-button">Отправить</button>
+    </div>
+    </div>
+<div class="center-button">
+            <div class="popup popup-course">
+            <div class="popup-header bg-orange">
+            <h4>Английский для начинающих</h4>
+            <button><img class="img-close" src="img/close.png" width="19" height="19" alt=""></button>
+            </div>
+            <div class="info"> 
+                    <input class="name-input" type="text" placeholder="Ваше Имя">
+                    <input id="phone"placeholder="+7 (___) ___-____">
+                    <select name="select"> 
+                            <option value="" disabled selected>Адрес школы</option>
+                            <option value="value2">Никитина</option>
+                            <option value="value3">Красный проспект</option>
+                          </select>
+                    <button class="popup-button">Записаться</button>
+    </div>
+    </div>
 </html>
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
