--- a/english_school/index.html
+++ b/english_school/index.html
@@ -28,6 +28,11 @@
 </div>
 <div class="adress"><span class="adress-click">Адреса</span>
     <img src="img/address.png" width="43" height="43" alt="">
+    <div onclick="burger()" class="menubutton">
+            <div class="menuitem"></div>
+            <div class="menuitem"></div>
+            <div class="menuitem"></div>
+        </div>
 </div>
 </header>
 <nav class="bg-orange">
@@ -490,7 +495,7 @@ viewBox="0 0 8500 8500"
         </div>
         <div class="info"> 
                 <input class="name-input" type="text" placeholder="Ваше Имя">
-                <input id="phone"placeholder="+7 (___) ___-____">
+                <input id="phone"placeholder="Номер телефона">
                 <button class="popup-button">Отправить</button>
     </div>
     </div>
@@ -500,17 +505,22 @@ viewBox="0 0 8500 8500"
             <h4>Английский для начинающих</h4>
             <button><img class="img-close" src="img/close.png" width="19" height="19" alt=""></button>
             </div>
-            <div class="info"> 
+            <div class="center-button">
+            <div class="popup-text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium rspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totamrspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totamdoloremque laudantium, totam 
+            </div>
+            <div class="info-course"> 
                     <input class="name-input" type="text" placeholder="Ваше Имя">
-                    <input id="phone"placeholder="+7 (___) ___-____">
+                    <input id="phone"placeholder="Номер телефона">
                     <select name="select"> 
                             <option value="" disabled selected>Адрес школы</option>
                             <option value="value2">Никитина</option>
                             <option value="value3">Красный проспект</option>
                           </select>
-                    <button class="popup-button">Записаться</button>
+                    <button class="popup-button button-course">Записаться</button>
     </div>
     </div>
+</div>
 </html>
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
