--- a/english_school/index.html
+++ b/english_school/index.html
@@ -498,7 +498,8 @@ viewBox="0 0 8500 8500"
                 <input id="phone"placeholder="Номер телефона">
                 <button class="popup-button">Отправить</button>
     </div>
-    </div>
+</div>
+</div>
 <div class="center-button">
             <div class="popup popup-course">
             <div class="popup-header bg-orange">
@@ -520,6 +521,85 @@ viewBox="0 0 8500 8500"
                     <button class="popup-button button-course">Записаться</button>
     </div>
     </div>
+</div>
+<div class="center-button">
+        <div class="popup popup-result">
+        <div class="popup-header bg-orange">
+        <h4>КАКОЙ КУРС ПОДОЙДЕТ ИМЕННО ВАМ?</h4>
+        <button><img class="img-close" src="img/close.png" width="19" height="19" alt=""></button>
+    </div>
+    <h5>Вам подойдет курс: <span>Английский для начинающих</span></h5>
+        <div class="info-course"> 
+                <input class="name-input" type="text" placeholder="Ваше Имя">
+                <input id="phone"placeholder="Номер телефона">
+                <select name="select"> 
+                        <option value="" disabled selected>Адрес школы</option>
+                        <option value="value2">Никитина</option>
+                        <option value="value3">Красный проспект</option>
+                      </select>
+                <button class="popup-button button-course button-result">Оставить заявку</button>
+</div>
+    
+</div>
+</div>
+<div class="center-button">
+        <div class="popup popup-group">
+        <div class="popup-header bg-orange">
+        <h4>SECONDARY (10-12 лет)</h4>
+        <button><img class="img-close" src="img/close.png" width="19" height="19" alt=""></button>
+    </div>
+        <p>
+                Отличительные особенности курса:
+                	Развитие  навыков 21-го века (знания о культуре разных стран; умение работать в команде;коммуникативные навыки.) Благодаря партнерству между Pearson и BBC, курснаполнен аутентичными материалами, которые являются актуальными и мотивирующими для подростков. Развивая навыки 21-го века у современного ученика, материалы BBC фокусируются на:
+                	— знаниях о культуре разных стран;
+                	— сотрудничеству в рамках проектной работы;
+                	— коммуникативных навыках.
+                	— ExtraOnlinePractice: мотивирующие интерактивные упражнения , дополнительные материалами для повторения и закрепления
+                	Рабочая тетрадь (Workbook) предоставляет дополнительную практику
+                	Курс улучшает понимание и запоминание:
+                	— используя ранее приобретённые знания студентов;
+                	— предоставляя четкие структуры, примеры и поэтапные задания
+                	— создает благоприятную и позитивную среду обучения посредством пошагового подхода.
+                	Практические задания в формате экзамена легко интегрируются в уроки, обеспечивая студентов практикой прохождения тестов и достижения своих целей.
+                	Оценка обучения представлена во всех компонентах курса, что позволяет студентам лучше ориентироваться, понимать, чему они учатся, и более активно участвовать в процессе обучения.
+                Это делается через:
+                	— постановку целей / критериев успеха
+                	— мониторинг / предоставлениеобратнойсвязи
+                	— взаимное обучение
+                	— независимое обучение
+        </p>
+</div>
+    
+</div>
+</div>
+<div class="center-button">
+        <div class="popup popup-test">
+        <div class="popup-header bg-orange">
+        <h4>КАКОЙ КУРС ПОДОЙДЕТ ИМЕННО ВАМ?</h4>
+        <button><img class="img-close" src="img/close.png" width="19" height="19" alt=""></button>
+    </div>
+    <div class=" test-content">
+<span>Click on the best synonym for ATTORNEY ? </span>
+<form class="flex-form" action="#">
+        <div>
+          <input type="radio" id="test1" name="radio-group" checked>
+          <label for="test1">Accountant</label>
+        </div>
+        <div>
+          <input type="radio" id="test2" name="radio-group">
+          <label for="test2">Lawyer</label>
+        </div>
+        <div>
+          <input type="radio" id="test3" name="radio-group">
+          <label for="test3">Performer</label>
+        </div>
+        <div>
+            <input type="radio" id="test4" name="radio-group">
+            <label for="test4">Mechanic</label>
+        </div>
+      </form>
+</div>
+</div>   
 </div>
 </html>
 
