--- a/english_school/index.html
+++ b/english_school/index.html
@@ -579,7 +579,10 @@ viewBox="0 0 8500 8500"
         <button><img class="img-close" src="img/close.png" width="19" height="19" alt=""></button>
     </div>
     <div class=" test-content">
-<span>Click on the best synonym for ATTORNEY ? </span>
+        <div class="flex-form">
+<span class="test-question">Click on the best synonym for ATTORNEY ? </span>
+<span class="test-name">Level: Medium 10</span>
+</div>
 <form class="flex-form" action="#">
         <div>
           <input type="radio" id="test1" name="radio-group" checked>
@@ -598,6 +601,11 @@ viewBox="0 0 8500 8500"
             <label for="test4">Mechanic</label>
         </div>
       </form>
+      <div class="test-wrap">
+      <div class="progress-bar"><span class="text-progress">10%</span></div>
+      <button class="test-button-prev"><img src="img/right-arrow.png" alt=""></button>
+      <button class="test-button-next">Далее</button>
+    </div>
 </div>
 </div>   
 </div>
