--- a/english_school/index.html
+++ b/english_school/index.html
@@ -12,6 +12,7 @@
     <title>Level Eleven</title>
 </head>
 <header>
+        <div class="header-wrapper">
 <div class="logo"><img src="img/logo.png" width="280" height="85" alt=""></div>
 <div class="contacts">
     <a href="tel:+1234567890"><span>+7 (383) 000 00 00</span></a>
@@ -26,6 +27,7 @@
     <a href="#"><img src="img/linkedin.png" alt=""></a>
 </div>
 </div>
+        </div>
 <div class="adress"><span class="adress-click">Адреса</span>
     <img src="img/address.png" width="43" height="43" alt="">
     <div onclick="burger()" class="menubutton">
@@ -38,6 +40,7 @@
 <nav class="bg-orange">
 
     <ul class="main-navigation">
+            <div class="header-wrapper">
         <li class="nav-item bg-orange first-item"><a href="#course">Курсы</a></li>
         <li class="nav-item bg-orange"><a href="#prepods">Преподаватели</a></li>
         <li class="nav-item bg-orange"><a href="#whywe">Почему мы</a></li>
@@ -45,6 +48,7 @@
         <li class="nav-item bg-orange"><a href="#uslugi">Услуги</a></li>
         <li class="nav-item bg-orange"><a href="#preim">Преимущества</a></li>
         <li class="nav-item bg-orange"><a href="#contacts">Контакты</a></li>
+    </div>
         <div class="last-item">
         <li class="nav-item bg-white"><a href="#otziv">Отзывы</a></li>
         <li class="nav-item bg-white"><a href="#test">Тест</a></li>
